--- a/styles/main.css
+++ b/styles/main.css
@@ -72,13 +72,12 @@ body {
   font-family: var(--font-stack);
   font-size: var(--font-base);
   line-height: 1.25;
-  line-height: 1.25;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: auto;
   -moz-text-size-adjust: auto;
        text-size-adjust: auto;
   font-optical-sizing: auto;
-  padding-inline: calc(var(--l) + 1.2vmin);
+  padding-inline: calc(var(--l) + 1vmin);
   padding-block: calc(var(--s) + 1vmin);
   min-block-size: 100vh;
   min-block-size: 100dvh;
@@ -87,20 +86,19 @@ body {
 a:where(:hover,:focus,:focus-visible,:active) { filter: drop-shadow(1px 1px 1px var(--orange-1)); }
 
 h1 { 
-  --_min: 1.25rem;
+  --_min: 2.25rem;
   --_max: 5rem;
-  --_modifier: 2.5cqi;
-  container-type: inline-size;
+  --_modifier: 1.25vmax;
   font-size: clamp(var(--_min), var(--_min) + var(--_modifier), var(--_max));
   font-weight: 900;
-  letter-spacing: .16cqi;
-  line-height: max(1rem, 1.25rem + 4cqi);
+  letter-spacing: .48vmin;
+  line-height: max(1rem, 1.25rem + 3.2vmax);
   text-transform: uppercase;
   -webkit-text-stroke-color: var(--text-color);
-  -webkit-text-stroke-width: .24cqi;
-  padding-block: calc(var(--xxs) + 1cqi);  
-  -webkit-text-stroke-width: .24cqi;
-  padding-block: calc(var(--xxs) + 1cqi);  
+  -webkit-text-stroke-width: .48vmin;
+  padding-block: calc(var(--xxs) + 1vmin);  
+  -webkit-text-stroke-width: .48vmin;
+  padding-block: calc(var(--xxs) + 1vmin);  
 }
 
 ul {
@@ -109,22 +107,19 @@ ul {
 }
 
 main {
+  grid-column: 1/24;
   grid-row: 2; 
-}
-
-main {
-  grid-column: 3/-3; 
-  grid-column: 2/24;
 }
 
 .icon-set { display: none; } 
 
 .header { 
   display: grid;
-  grid-column: 2/24;
+  grid-column: 1/24;
   grid-row: 1;
-  block-size: 25vh;
+  min-block-size: 15vh;
   text-align: center;
+  align-items: center;
 }
 
 .brand {
@@ -169,7 +164,6 @@ main {
   display: flex; 
   align-items: flex-end;
   font-size: clamp(1vmin,calc(var(--s) + var(--xs)),3vmin);
-  block-size: 25vh;
 }
     
 .footer-menu ul { 
@@ -357,11 +351,4 @@ main {
 
 @supports (color:color(display-p3 1 1 1)) and (prefers-color-scheme:dark) { 
     .footer-menu--item a { --text-shadow: color(display-p3 0.873 0.883 0.889); }
-}
-
-@container (inline-size > 1240px) {
-  .about-item { 
-    width: clamp( 20cqi, 60ch, 545px);
-    inline-size: clamp(36cqi, 60ch - 1.48cqi, 3cqi - 1rem);
-  }
 }
