--- a/styles/main.css
+++ b/styles/main.css
@@ -75,7 +75,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: auto;
   -moz-text-size-adjust: auto;
-       text-size-adjust: auto;
+       -webkit-text-size-adjust: auto;
+  -webkit-text-stroke-width: 0.1vmin;
   font-optical-sizing: auto;
   padding-inline: calc(var(--l) + 1vmin);
   padding-block: calc(var(--s) + 1vmin);
