remove social icons in small viewport

--- a/styles/main.css
+++ b/styles/main.css
@@ -347,18 +347,7 @@ main {
 }
 
 @media (max-width: 760px) {
-  .icon-text{
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0,0,0,0);
-    white-space: nowrap;
-    border: 0;
-  }
-
+  [role='img'] { display: none; }
   #icon-email { margin-block-start: 0.125rem; }
 }
 
