--- a/styles/main.css
+++ b/styles/main.css
@@ -65,7 +65,7 @@ html, body { min-block-size: 100%; margin: 0; padding: 0; }
 
 body { 
   display: grid;
-  grid-template-rows: minmax(1.5rem, auto) minmax(3rem, 5.5fr) minmax(6rem, auto);
+  grid-template-rows: minmax(1.5rem, auto) minmax(3rem, 3fr) minmax(6rem, auto);
   grid-template-columns: repeat(12,minmax(.5rem,1fr));
   color: var(--text-color);
   background: var(--bkgnd);
@@ -75,11 +75,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: auto;
   -moz-text-size-adjust: auto;
-       -webkit-text-size-adjust: auto;
+  -webkit-text-size-adjust: auto;
   -webkit-text-stroke-width: 0.064vmin;
   font-optical-sizing: auto;
-  padding-inline: calc(var(--l) + 1vmin);
-  padding-block: calc(var(--s) + 1vmin);
+  padding: calc(var(--s) + 1vmin);
   min-block-size: 100vh;
   min-block-size: 100dvh; 
 }
@@ -87,19 +86,44 @@ body {
 a:where(:hover,:focus,:focus-visible,:active) { filter: drop-shadow(1px 1px 1px var(--orange-1)); }
 
 h1 { 
-  --_min: 2.25rem;
-  --_max: 5rem;
-  --_modifier: 1.25vmax;
-  font-size: clamp(var(--_min), var(--_min) + var(--_modifier), var(--_max));
+  --_min: var(--xxl);
+  --_max: var(--xxxl);
+  --_fs-modifier: 11.25cqmin; 
+  --_lh-modifier: 5.6cqmax;
+  --_ls-modifier: 0.64cqmin;
+  --_tsw-modifier: .36cqmin;  
+  font-size: clamp(var(--_min), var(--_fs-modifier), var(--_max));
   font-weight: 900;
-  letter-spacing: .48vmin;
-  line-height: max(1rem, 1.25rem + 3.2vmax);
+  letter-spacing: var(--_ls-modifier);
+  line-height: clamp(var(--m),var(--_lh-modifier), var(--xl));
   text-transform: uppercase;
   -webkit-text-stroke-color: var(--text-color);
-  -webkit-text-stroke-width: .48vmin;
-  padding-block: calc(var(--xxs) + 1vmin);  
-  -webkit-text-stroke-width: .48vmin;
-  padding-block: calc(var(--xxs) + 1vmin);  
+  -webkit-text-stroke-width: var(--_tsw-modifier);
+  padding-block: calc(var(--xxs) + 3cqmax);  
+}
+
+@container header-container (min-width: 320px) {
+  h1 { 
+    --_max: calc(var(--xxxl) * 4);
+    --_fs-modifier: 10cqmin;  
+    --_tsw-modifier: .64cqmin;  
+  }
+}
+
+@container header-container (min-width: 770px) {
+  h1 { 
+    --_max: calc(var(--xxxl) * 4);
+    --_fs-modifier: 9cqmax; 
+    --_tsw-modifier: 1cqmin;
+  }
+}
+
+@container header-container (min-width: 1600px) {
+  h1 { 
+    --_fs-modifier: 10cqmax; 
+    --_ls-modifier: 1.64cqmin;
+    --_tsw-modifier: 1.48cqmin;  
+  }
 }
 
 ul {
@@ -115,6 +139,8 @@ main {
 .icon-set { display: none; } 
 
 .header { 
+  container-type: inline-size;
+  container-name: header-container; 
   grid-column: 1/24;
   min-block-size: 15vh;
   text-align: center;
@@ -201,13 +227,15 @@ main {
   filter: drop-shadow(1px 1px 1px var(--black-5));
 }
 
-.icon-text { -webkit-margin-after: 0.1rem; margin-block-end: 0.1rem; }
+.icon-text { 
+  -webkit-margin-after: 0.1rem; margin-block-end: 0.1rem;
+ }
 .icon-text:nth-of-type(3) { -webkit-margin-before: 0.2rem; margin-block-start: 0.2rem; }
 
 .copryright {
   padding-block-end: var(--xs);
   margin-left: auto;
-  font-size: min(.25rem + 1vmin,.75rem);
+  font-size: min(.5rem + 1vmin, .64rem);
 }
 
 .asset {
@@ -319,18 +347,7 @@ main {
 }
 
 @media (max-width: 760px) {
-  .icon-text{
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0,0,0,0);
-    white-space: nowrap;
-    border: 0;
-  }
-
+  [role='img'] { display: none; }
   #icon-email { margin-block-start: 0.125rem; }
 }
 
