--- a/styles/main.css
+++ b/styles/main.css
@@ -115,6 +115,20 @@ body > * + * {
   --link-ease:cubic-bezier(0.2, 0.8, 0.2, 1);
   --link-timing:444ms;
   --font-stack: "Recursive", system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Open-sans,"Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  --recursive-wght: 100;
+  --recursive-CASL: 0;
+  --recursive-MONO: 0;   /* Monospace    */
+  --recursive-slnt: 0;   /* Upright      */
+  --recursive-CRSV: 0.5;
+}
+
+*,
+*:before,
+*:after {
+  font-variation-settings: 
+    "MONO" var(--recursive-MONO), "CASL" var(--recursive-CASL),
+    "slnt" var(--recursive-slnt), "CRSV" var(--recursive-CRSV), 
+    "wght" var(--recursive-wght);
 }
 
 :focus { outline: 1px solid var(--orange-1); }
@@ -133,8 +147,9 @@ body > * + * {
   transition: color .3s, background .2s;
 }
 html {   
+  scroll-behavior: smooth;
   scroll-snap-type: y mandatory;
-  overflow-y: scroll;
+  overflow-y: scroll;  
 }
 
 body {
@@ -149,8 +164,6 @@ body {
   -moz-text-size-adjust: auto;
   min-block-size: 100vh;
   padding:0 4cqi;
-  scroll-behavior: smooth;
-  scroll-padding-top: 10cqi;
 }
 
 ul {
@@ -163,7 +176,7 @@ header {
   align-items: baseline;
   justify-content: space-between;
   width: 100%;
-  min-block-size: 5rem;
+  min-block-size: 4rem;
 }
 
 nav ul {
@@ -176,14 +189,12 @@ nav ul {
 }
 
 h1 {
+  --recursive-wght: 850;
+  --recursive-CASL: .72;
   font-family: "Recursive", sans-serif, system-ui ;
   font-size: clamp(1rem,calc(1.2rem + .8cqi), 2.4rem);
   line-height: 1.1;
   text-transform: uppercase;
-  font-variation-settings: 
-    'wght' 850,
-    'CASL' .72
-    ;
 }
 
 main { margin: auto; }
@@ -230,15 +241,14 @@ main { margin: auto; }
 }
 
 .footer-menu { 
+  --recursive-wght: 200;
   display: flex; 
   margin-block-start: auto;
   font-size: clamp(1vmin,calc(var(--s) + var(--xs)),3vmin);
-  font-variation-settings: 'wght' 200;
-  
-  .copryright { 
-    margin-left: auto; 
-    align-self: center;
-  }
+    .copryright { 
+      margin-left: auto; 
+      align-self: center;
+    }
 }
 
 .footer-menu ul { 
@@ -298,3 +308,4 @@ main { margin: auto; }
 @supports (color:color(display-p3 1 1 1)) and (prefers-color-scheme:dark) { 
   .footer-menu--item a { --text-shadow: color(display-p3 0.873 0.883 0.889); }
 }
+/*# sourceMappingURL=main.css.map */
