--- a/styles/main.css
+++ b/styles/main.css
@@ -242,7 +242,7 @@ main { margin: auto; }
   box-shadow:
     inset 0 -2px 0 0 rgba(74,152,191,.96),
     inset 0 -4px 0 0 rgba(74,152,191,.72),
-    inset 0 -8pxs0 0 rgba(74,152,191,.48),
+    inset 0 -8px 0 0 rgba(74,152,191,.48),
     inset 0 -12px 0 0 rgba(74,152,191,.24);
 }
 
