adjust font-size & icon size

--- a/styles/main.css
+++ b/styles/main.css
@@ -167,7 +167,6 @@ body > * + * {
 ::selection {
   background: var(--selection-color); 
   color: var(--white-1);
-  transition: color .3s, background .2s;
 }
 
 html {   
@@ -216,10 +215,10 @@ nav ul {
 }
 
 h1 {
-  --recursive-wght: 650;
-  --recursive-CASL: .72;
-  font-family: "Recursive", sans-serif, system-ui ;
-  font-size: clamp(1rem,calc(1.2rem + .8cqi), 1.5rem);
+  --recursive-wght: 700;
+  --recursive-CASL: .64;
+  font-family: "Recursive", sans-serif, system-ui;
+  font-size: clamp(var(--f-base),calc(var(--f-base) + .4cqi), 1.5rem);
   line-height: 1.1;
   text-transform: uppercase;
   transition: font-variation-settings .48s;
@@ -227,6 +226,12 @@ h1 {
       --recursive-wght: 900;
       --recursive-CASL: 0.1;
     }
+}
+
+[role='img'] { 
+  width:1.25rem;
+  height:1.25rem;
+  margin-block-end: 0.3rem;
 }
 
 main { margin: auto; }
@@ -243,7 +248,7 @@ main { margin: auto; }
 :is(.cover, footer) { scroll-snap-align: start; }
 
 :is(.about-item) { 
-  font-size: max(1rem, calc(1rem + 2cqi));
+  font-size: max(var(--f-base), calc(1rem + 1cqi));
   animation-name: enter;
   animation-timeline: view();
 }
@@ -284,8 +289,8 @@ main { margin: auto; }
   justify-content: space-between;
   flex-wrap: wrap;
   margin-block-start: auto;
-  font-size: clamp(1vmin,calc(var(--s) + var(--s)), .75rem);
-    .copryright { align-self: center; }
+  /* font-size: clamp(1vmin,calc(var(--s) + var(--s)), .75rem); */
+    .copyright { align-self: center; }
 }
 
 .footer-menu ul { 
@@ -296,8 +301,9 @@ main { margin: auto; }
 
 .footer-menu--item a {
   display: flex;
-  align-items: center;
-  margin-inline-end: var(--xxs);gap:1ch;
+  align-items: end;
+  margin-inline-end: var(--xxs); 
+  gap: 1ch;
   filter: drop-shadow(.5px .5px 1px var(--text-shadow));
   transition: fill 330ms;
     @supports (color:color(display-p3 1 1 1)) and (prefers-color-scheme:dark) { 
@@ -326,8 +332,8 @@ main { margin: auto; }
 }
 
 .icon-text { margin-block-end: 0.1rem; }
-#icon-email {margin-block-start: .3rem;}
 #about { max-width: max(48ch, 64ch); }
+#icon-twitter {margin-block-end: .3rem;} 
 
 @keyframes enter {
   from { opacity: 0; }
@@ -336,7 +342,6 @@ main { margin: auto; }
 
 @media (max-width: 760px) {
   [role='img'] { display: none; }
-  #icon-email { margin-block-start: 0.125rem; }
 }
 
 @media (prefers-color-scheme: dark) {
